old/slurm-38217.out
A.L.E: Arcade Learning Environment (version 0.7.5+db37282)
[Powered by Stella]
/home/aariyak/miniconda3/envs/DS595RL/lib/python3.9/site-packages/gym/core.py:317: DeprecationWarning: [33mWARN: Initializing wrapper in old step API which returns one bool instead of two. It is recommended to set `new_step_api=True` to use new step API. This will be the default behaviour in future.[0m
  deprecation(
Traceback (most recent call last):
  File "/home/aariyak/Atari-Advanced-DQN/main.py", line 47, in <module>
    run(args)
  File "/home/aariyak/Atari-Advanced-DQN/main.py", line 33, in run
    from agent_dqn import Agent_DQN
  File "/home/aariyak/Atari-Advanced-DQN/agent_dqn.py", line 90
    if args.test_dqn:
    ^
IndentationError: expected an indented block
